--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+    height: 100%;
+}
+
+h1 {
+    color: #264d73;
+    font-size: 2.5rem;
+}
+
+h2,
+h3 {
+    color: #444;
+    font-weight: lighter;
+}
+
+h3 {
+    font-size: 1.3rem;
+}
+
+body,
+input[text] {
+    color: #333;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+* {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
