add loading overlay and edit product

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <section class="main-content">
     <router-outlet></router-outlet>
   </section>
+  <app-overlay><mat-spinner color="accent"></mat-spinner></app-overlay>
 </main>
