--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -1,1 +1,39 @@
-<p>product-edit works!</p>
+<div>
+  <h1>Edit Product</h1>
+  <form (ngSubmit)="onSave()" [formGroup]="productForm">
+    <mat-form-field appearance="fill">
+      <mat-label>Title</mat-label>
+      <input matInput formControlName="title">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Description</mat-label>
+      <textarea matInput formControlName="description"></textarea>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Price</mat-label>
+      <input matInput type="number" formControlName="price">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>discountPercentage</mat-label>
+      <input matInput type="number" formControlName="discountPercentage">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Stock</mat-label>
+      <input matInput type="number" formControlName="stock">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Brand</mat-label>
+      <input matInput formControlName="brand">
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Category</mat-label>
+      <input matInput formControlName="category">
+    </mat-form-field>
+
+    <div class="action-btn-wrapper">
+      <button type="button" mat-raised-button (click)="cancelEdit()">Cancel</button>
+      <button [disabled]="productForm.invalid || !productForm.dirty" mat-raised-button color="primary"
+        type="submit">Save</button>
+    </div>
+  </form>
+</div>
