--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -6,6 +6,10 @@
     flex: 1;
     display: flex;
     justify-content: flex-end;
+
+    button {
+        cursor: pointer;
+    }
 }
 
 .user-picture{
