--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,10 +5,13 @@
             <mat-icon matBadgeColor="warn">login</mat-icon>
         </button>
         <ng-container *ngIf="vm.currentUser as currentUser">
+            <button mat-icon-button (click)="toggleTheme()">
+                <mat-icon>light_mode</mat-icon>
+            </button>
             <button mat-icon-button>
                 <mat-icon [matBadge]="vm.numberOfItems" matBadgeColor="warn">shopping_cart</mat-icon>
             </button>
-            <div  class="user-picture">
+            <div class="user-picture">
                 <a routerLink="/me"><img [src]="currentUser.image"></a>
             </div>
         </ng-container>
